Minor Change: Improved text.

--- a/conf/resources/MessagingResources_pt.properties
+++ b/conf/resources/MessagingResources_pt.properties
@@ -34,7 +34,7 @@ label.sentMailsCount = Total de e-mails enviados
 
 link.view = View
 
-message.email.footer.prefix = Esta mensagem foi enviada em nome de(o) 
+message.email.footer.prefix = Esta mensagem foi enviada em nome do(a)
 message.email.footer.prefix.suffix = , para os seguintes destinatários:
 message.email.sent = O e-mail foi submetido para envio e será processado oportunamente. Enquanto não for enviado, poderá apagá-lo.
 
