Messaging as an abstract layer over message dispatching, with the old email-dispatch as a backend using direct smtp communication. Closes #3

--- a/core/src/main/resources/resources/MessagingResources_en.properties
+++ b/core/src/main/resources/resources/MessagingResources_en.properties
@@ -40,3 +40,18 @@ message.email.sent = The e-mail has been submitted for sending and will be proce
 
 title.email.sent.emails = E-mail
 title.email.sent.emails.resume = Send Report Summary 
+
+title.messaging = Messaging System
+title.messaging.emails = Email Sending
+
+label.messaging.bootstrapper = Messaging System
+label.messaging.bootstraper.systemsender = System Sender
+label.messaging.bootstraper.systemsender.description = Sender for system emails configuration 
+
+error.messaging.bootstrapper.emptyFromAddress = Sender address is required
+error.messaging.bootstrapper.emptyFromName = Sender name is required
+error.messaging.bootstrapper.emptyGroupExpression = Sender group is required
+
+label.messaging.sender.hint.fromName = Aplicações Centrais
+label.messaging.sender.hint.fromAddress = noreply@tecnico.ulisboa.pt
+label.messaging.sender.hint.group = #managers
