--- a/core/src/main/resources/resources/MessagingResources_pt.properties
+++ b/core/src/main/resources/resources/MessagingResources_pt.properties
@@ -40,3 +40,18 @@ message.email.sent = O e-mail foi submetido para envio e será processado oportun
 
 title.email.sent.emails = E-mail
 title.email.sent.emails.resume = Resumo do Relatório de Envio
+
+title.messaging = Sistema de Mensagens
+title.messaging.emails = Envio de Emails
+
+label.messaging.bootstrapper = Sistema de Mensagens
+label.messaging.bootstraper.systemsender = Remetente de Sistema
+label.messaging.bootstraper.systemsender.description = Configuração do remetente das mensagens de sistema
+
+error.messaging.bootstrapper.emptyFromAddress = Endereço do remetente obrigatório
+error.messaging.bootstrapper.emptyFromName = Nome do remetente obrigatório
+error.messaging.bootstrapper.emptyGroupExpression = Grupo de envio obrigatório
+
+label.messaging.sender.hint.fromName = Aplicações Centrais
+label.messaging.sender.hint.fromAddress = noreply@tecnico.ulisboa.pt
+label.messaging.sender.hint.group = #managers
