Message deletion policy configurable by sender. Closes #4

--- a/core/src/main/resources/resources/MessagingResources_pt.properties
+++ b/core/src/main/resources/resources/MessagingResources_pt.properties
@@ -15,7 +15,7 @@ label.email.sentDate = Enviado
 label.email.subject = Assunto
 label.failedMailsCount = Total de e-mails não enviados
 label.fromName = Remetente
-label.message.email.send.queue = Após o envio os e-mails serão guardados durante algum tempo e posteriormente apagados.
+label.message.email.send.queue = Após o envio os e-mails serão mantidos {0}
 label.messaging.new.message = Novo E-mail
 label.messaging.sender.fromAddress = Endereço do remetente
 label.messaging.sender.fromName = Remetente
@@ -31,6 +31,10 @@ label.receiversOfCopy = Outros destinatários
 label.recipientsWithEmailCount = Total de destinatários (com e-mail)
 label.replyTos = Responder a
 label.sentMailsCount = Total de e-mails enviados
+
+label.messaging.MessageDeletionPolicy.keepPeriod = for {0}
+label.messaging.MessageDeletionPolicy.keepMessages = até {0} mensagens
+label.messaging.MessageDeletionPolicy.unlimited = para sempre
 
 link.view = View
 
