--- a/core/src/main/resources/resources/MessagingResources_en.properties
+++ b/core/src/main/resources/resources/MessagingResources_en.properties
@@ -15,7 +15,7 @@ label.email.sentDate = Sent
 label.email.subject = Subject
 label.failedMailsCount = Total e-mails not sent
 label.fromName = Sender
-label.message.email.send.queue = After being sent, the e-mails are stored temporarily, and are deleted later.
+label.message.email.send.queue = After being sent, the e-mails are kept {0}
 label.messaging.new.message = New E-mail
 label.messaging.sender.fromAddress = Sender address
 label.messaging.sender.fromName = Sender
@@ -31,6 +31,10 @@ label.receiversOfCopy = Other recipients
 label.recipientsWithEmailCount = Total recipients (with e-mail)
 label.replyTos = Reply to
 label.sentMailsCount = Total e-mails sent
+
+label.messaging.MessageDeletionPolicy.keepPeriod = for {0}
+label.messaging.MessageDeletionPolicy.keepMessages = up to {0} messages
+label.messaging.MessageDeletionPolicy.unlimited = forever
 
 link.view = Ver
 
