Message footer only included when sending emails through the interface. Templating mechanism improved. Closes #5

--- a/core/src/main/resources/resources/MessagingResources_en.properties
+++ b/core/src/main/resources/resources/MessagingResources_en.properties
@@ -38,8 +38,7 @@ label.messaging.MessageDeletionPolicy.unlimited = forever
 
 link.view = Ver
 
-message.email.footer.prefix = This message was sent by 
-message.email.footer.prefix.suffix = , to the following recipients:
+message.email.footer = {0}\n\n---\nThis message was sent by {1}, to the following recipients:\n{2}\n
 message.email.sent = The e-mail has been submitted for sending and will be processed in due time. While it has not been sent, you can delete it.
 
 title.email.sent.emails = E-mail
