--- a/core/src/main/resources/resources/MessagingResources_pt.properties
+++ b/core/src/main/resources/resources/MessagingResources_pt.properties
@@ -38,8 +38,7 @@ label.messaging.MessageDeletionPolicy.unlimited = para sempre
 
 link.view = View
 
-message.email.footer.prefix = Esta mensagem foi enviada em nome do(a)
-message.email.footer.prefix.suffix = , para os seguintes destinatários:
+message.email.footer = {0}\n\n---\nEsta mensagem foi enviada em nome do(a) {1}, para os seguintes destinatários:\n{2}\n
 message.email.sent = O e-mail foi submetido para envio e será processado oportunamente. Enquanto não for enviado, poderá apagá-lo.
 
 title.email.sent.emails = E-mail
