Add message templates for sending institutional messages programmatically
Message templates are localizable and use pebble as a templating language.
LocalizedString arguments are localized automatically when sending the
message. The templates are defined via annotation to be registered on
servlet container initialization. This annotation allows initializing the
template content through the .properties files and the messaging
configuration interface allows editing the templates' contents in
production.
The institutional footer with recipient descrimination was converted to a
template that wraps any message sent via the interface and can now be
edited in production.
Minor changes and corrections were made to message sending, mostly related
to exception throwing, and to the messaging interfaces.

--- a/core/src/main/resources/MessagingResources_en.properties
+++ b/core/src/main/resources/MessagingResources_en.properties
@@ -1,15 +1,17 @@
 error.bootstrapper.systemsender.address.empty = Sender address is required.
 error.bootstrapper.systemsender.group.empty = Sender group is required.
 error.bootstrapper.systemsender.name.empty = Sender name is required.
+error.message.null.sender = Attempt to send a message without a sender.
 error.message.validation.bcc.invalid = E-mail address is not valid: {0}.
-error.message.validation.message.empty = Message is required.
+error.message.validation.message.empty = Message body is required.
 error.message.validation.html.forbidden = This sender is not allowed to send HTML messages.
 error.message.validation.recipients.empty = At least one recipient is required.
 error.message.validation.subject.empty = Subject is required.
 error.message.validation.sender.empty = Sender is required.
-error.message.validation.recipient.erroneous = A recipient expression could not be understood: {0}. 
+error.message.validation.recipient.erroneous = A recipient expression could not be understood: {0}.
 error.not.authorized = You do not have permission to view this page
-error.not.found = The requested page was not found
+error.template.malformed = Message template with id "{0}" could not be compiled.
+error.template.missing = Message template with id "{0}" could not be found.
 
 hint.bootstrapper.systemsender.address = noreply@organization.com
 hint.bootstrapper.systemsender.group = #managers
@@ -19,7 +21,13 @@ label.bootstrapper.systemsender.address = Address
 label.bootstrapper.systemsender.group = Sender Group
 label.bootstrapper.systemsender.name = Name
 
-message.footer = \n\n---\nThis message was sent by {0}, to the following recipients:\n\t{1}
+message.template.message.wrapper.description = Wraps institutional messages sent via the message sending interface.
+message.template.message.wrapper.html =
+message.template.message.wrapper.parameter.htmlContent = The HTML content of the message.
+message.template.message.wrapper.parameter.recipients = The message's group recipients.
+message.template.message.wrapper.parameter.sender = Name of the message sender.
+message.template.message.wrapper.parameter.textContent = The plain text content of the message.
+message.template.message.wrapper.text = {{textContent}}\n\n---\nThis message was sent by {{sender}}, to the following recipients:{% for recipient in recipients %}\n\t{{recipient}}{% endfor %}
 
 name.deletion.policy.messages = up to {0} messages
 name.deletion.policy.period = for {0}
