--- a/core/src/main/resources/MessagingResources_pt.properties
+++ b/core/src/main/resources/MessagingResources_pt.properties
@@ -1,15 +1,17 @@
 error.bootstrapper.systemsender.address.empty = Endereço do remetente é necessário.
 error.bootstrapper.systemsender.name.empty = Nome do remetente é necessário.
 error.bootstrapper.systemsender.group.empty = Grupo de envio é necessário.
+error.message.null.sender = Tentativa de envio de mensagem sem remetente.
 error.message.validation.bcc.invalid = Endereço de e-mail não é válido: {0}.
-error.message.validation.message.empty = Mensagem é necessária.
+error.message.validation.message.empty = Corpo da mensagem é necessário.
 error.message.validation.html.forbidden = Este remetente não está autorizado a enviar mensagens HTML.
 error.message.validation.recipients.empty = É necessário pelo menos um destinatário.
 error.message.validation.subject.empty = Assunto é necessário.
 error.message.validation.sender.empty = Remetente é necessário.
 error.message.validation.recipient.erroneous = Uma expressão de destinatário não foi compreendida: {0}.
 error.not.authorized = Não tem permissões para ver esta página
-error.not.found = A página pedida não foi encontrada
+error.template.malformed = Não foi possível compilar a template de mensagem com id "{0}".
+error.template.missing = Não foi possível encontrar a template de mensagem com id "{0}".
 
 hint.bootstrapper.systemsender.address = noreply@organization.com
 hint.bootstrapper.systemsender.group = #managers
@@ -19,7 +21,13 @@ label.bootstrapper.systemsender.address = Endereço
 label.bootstrapper.systemsender.group = Grupo de Envio
 label.bootstrapper.systemsender.name = Nome
 
-message.footer = \n\n---\nEsta mensagem foi enviada em nome do(a) {0}, para os seguintes destinatários:\n\t{1}
+message.template.message.wrapper.description = Envolve mensagens institucionais enviadas através da interface de envio de mensagens.
+message.template.message.wrapper.html =
+message.template.message.wrapper.parameter.htmlContent = O conteúdo HTML da mensagem.
+message.template.message.wrapper.parameter.recipients = Os grupos de destinatários da mensagem.
+message.template.message.wrapper.parameter.sender = O nome do remetente da mensagem.
+message.template.message.wrapper.parameter.textContent = O conteúdo textual simples da mensagem.
+message.template.message.wrapper.text = {{textContent}}\n\n---\nEsta mensagem foi enviada em nome do(a) {{sender}}, para os seguintes destinatários:{% for recipient in recipients %}\n\t{{recipient}}{% endfor %}
 
 name.deletion.policy.messages = até {0} mensagens
 name.deletion.policy.period = for {0}
