--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -1,13 +1,21 @@
 action.message.delete = Eliminar
 action.message.new = Nova Mensagem
 action.message.send = Enviar
+action.template.edit = Editar
+action.template.reset = Restaurar Conteúdo Padrão
+action.template.save = Guardar
+action.template.info.show = Ver Parâmetros
+action.template.info.hide = Esconder Parâmetros
 action.view.details = Ver Detalhes
 
 error.message.not.sent = Mensagem não pôde ser enviada:
+error.template.not.saved = Modelo de mensagem não pode ser guardado:
+error.template.undeclared = Modelo de mensagem não foi declarado.
 
 hint.sender.select = Seleccione um remetente
 hint.extra.bccs = alguem@exemplo.pt, ...
 
+label.Actions = Outras Acções
 label.message.bccs = Destinatários (Bcc)
 label.message.bccs.extra = Outros Destinatários (Bcc)
 label.message.bccs.extra.locale = Localização para Outros Destinatários
@@ -16,6 +24,7 @@ label.message.body.html = Mensagem HTML
 label.message.ccs = Destinatários (Cc)
 label.message.created = Criado
 label.message.locale = Localizações do Conteúdo
+label.no = Não
 label.message.replyTos = Responder a
 label.message.sender = Remetente
 label.message.sender.name = Nome do Remetente
@@ -27,18 +36,31 @@ label.message.status.sent = Enviado
 label.message.sent.by = Enviado por
 label.message.subject = Assunto
 label.message.tos = Destinatários (To)
-label.bootstrapper.systemsender.address = Endereço
-label.bootstrapper.systemsender.group = Grupo de Envio
-label.bootstrapper.systemsender.name = Nome
+label.sender.address = Endereço
+label.sender.group = Grupo de Envio
+label.sender.name = Nome
 label.sender.policy = Política de Preservação de Mensagens
 label.sender.replyTos = Responder a
+label.template.description = Descrição
+label.template.footer = Rodapé Automático
+label.template.id = Chave
+label.template.name = Nome
+label.template.parameters = Parâmetros
+label.yes = Sim
 
 notification.message.sent = Esta mensagem está pendente para envio. Enquanto não for enviada poderá apagá-la, cancelando o processo.
+notification.template.empty = Este modelo de mensagem encontra-se vazio. Tentativas de envio irão falhar reportando um erro.
+notification.template.subject.empty = O assunto deste modelo de mensagem encontra-se vazio. Tentativas de envio irão falhar reportando um erro.
+notification.template.message.empty = A mensagem deste modelo de mensagem encontra-se vazia. Tentativas de envio irão falhar reportando um erro.
 
 title.message = Mensagem
 title.message.new = Nova Mensagem
 title.messages = Mensagens
 title.messaging = Sistema de Mensagens
 title.messaging.sending = Envio de Mensagens
+title.messaging.templates = Configuração de Modelos de Mensagem
 title.sender = Informação do Remetente
 title.senders = Remetentes
+title.templates.config = Configuração de Modelos de Mensagem
+title.template = Modelo de Mensagem
+title.template.edit = Editar Modelo de Mensagem
