Add message templates for sending institutional messages programmatically
Message templates are localizable and use pebble as a templating language.
LocalizedString arguments are localized automatically when sending the
message. The templates are defined via annotation to be registered on
servlet container initialization. This annotation allows initializing the
template content through the .properties files and the messaging
configuration interface allows editing the templates' contents in
production.
The institutional footer with recipient descrimination was converted to a
template and can now be edited in production.
Minor changes and corrections were made to message sending, mostly related
to exception throwing, and to the messaging interfaces.

--- a/core/src/main/resources/MessagingResources_en.properties
+++ b/core/src/main/resources/MessagingResources_en.properties
@@ -9,7 +9,10 @@ error.message.validation.subject.empty = Subject is required.
 error.message.validation.sender.empty = Sender is required.
 error.message.validation.recipient.erroneous = A recipient expression could not be understood: {0}. 
 error.not.authorized = You do not have permission to view this page
-error.not.found = The requested page was not found
+error.template.invalid = Message template with id "{0}" produced an invalid message.
+error.template.malformed = Message template with id "{0}" could not be compiled.
+error.template.missing = Message template with id "{0}" could not be found.
+error.template.sending = Message template with id "{0}" produced a message that could not be sent.
 
 hint.bootstrapper.systemsender.address = noreply@organization.com
 hint.bootstrapper.systemsender.group = #managers
@@ -19,7 +22,9 @@ label.bootstrapper.systemsender.address = Address
 label.bootstrapper.systemsender.group = Sender Group
 label.bootstrapper.systemsender.name = Name
 
-message.footer = \n\n---\nThis message was sent by {0}, to the following recipients:\n\t{1}
+message.template.footer.name = Recipient Footer
+message.template.footer.body = \n\n---\nThis message was sent by {{sender}}, to the following recipients:\n\t{{recipients}}
+message.template.footer.description = Footer to be appended to messages containing the name of the institutional recipients
 
 name.deletion.policy.messages = up to {0} messages
 name.deletion.policy.period = for {0}
