--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -1,9 +1,13 @@
+action.configure.templates = Configure Templates
 action.message.delete = Delete
 action.message.new = New Message
 action.message.send = Send
+action.template.edit = Edit
+action.template.save = Save
 action.view.details = View Details
 
 error.message.not.sent = Message could not be sent:
+error.template.not.saved = Message template could not be saved:
 
 hint.sender.select = Select a sender
 hint.extra.bccs = someone@example.com, ...
@@ -16,6 +20,7 @@ label.message.body.html = HTML Message
 label.message.ccs = Recipients (Cc)
 label.message.created = Created
 label.message.locale = Content Locales
+label.no = No
 label.message.replyTos = Reply to
 label.message.sender = Sender
 label.message.sender.name = Sender Name
@@ -27,18 +32,30 @@ label.message.status.sent = Sent
 label.message.sent.by = Sent by
 label.message.subject = Subject
 label.message.tos = Recipients (To)
-label.bootstrapper.systemsender.address = Address
-label.bootstrapper.systemsender.group = Sender Group
-label.bootstrapper.systemsender.name = Name
+label.sender.address = Address
+label.sender.group = Sender Group
+label.sender.name = Name
 label.sender.policy = Message Storage Policy
 label.sender.replyTos = Reply to
+label.template.description = Description
+label.template.footer = Automatic Footer
+label.template.id = Key
+label.template.name = Name
+label.yes = Yes
 
 notification.message.sent = This message has been queued for sending. While it is not dispatched you may delete it, canceling the process.
+notification.template.empty = This message template is empty. Attempts to send it will fail reporting an error.
+notification.template.subject.empty = This message template's subject is empty. Attempts to send it will fail reporting an error.
+notification.template.message.empty = This message template's body is empty. Attempts to send it will fail reporting an error.
 
 title.message = Message
 title.message.new = New Message
 title.messages = Messages
 title.messaging = Messaging System
 title.messaging.sending = Message Sending
+title.messaging.templates = Template Configuration
 title.sender = Sender Information
 title.senders = Senders
+title.templates = Message Templates
+title.template = Message Template
+title.template.edit = Edit Message Template
