--- a/core/src/main/resources/MessagingResources_pt.properties
+++ b/core/src/main/resources/MessagingResources_pt.properties
@@ -9,7 +9,10 @@ error.message.validation.subject.empty = Assunto é necessário.
 error.message.validation.sender.empty = Remetente é necessário.
 error.message.validation.recipient.erroneous = Uma expressão de destinatário não foi compreendida: {0}.
 error.not.authorized = Não tem permissões para ver esta página
-error.not.found = A página pedida não foi encontrada
+error.template.invalid = A template de mensagem com id "{0}" produziu uma mensagem inválida.
+error.template.malformed = Não foi possível compilar a template de mensagem com id "{0}".
+error.template.missing = Não foi possível encontrar a template de mensagem com id "{0}".
+error.template.sending = A template de mensagem com id "{0}" produziu uma mensagem que não pode ser enviada.
 
 hint.bootstrapper.systemsender.address = noreply@organization.com
 hint.bootstrapper.systemsender.group = #managers
@@ -19,7 +22,9 @@ label.bootstrapper.systemsender.address = Endereço
 label.bootstrapper.systemsender.group = Grupo de Envio
 label.bootstrapper.systemsender.name = Nome
 
-message.footer = \n\n---\nEsta mensagem foi enviada em nome do(a) {0}, para os seguintes destinatários:\n\t{1}
+message.template.footer.name = Rodapé com Destinatários
+message.template.footer.body = \n\n---\nEsta mensagem foi enviada em nome do(a) {{sender}}, para os seguintes destinatários:\n\t{{recipients}}
+message.template.footer.description = Rodapé para ser adicionado às mensagens contendo o nome dos destinatários institucionais
 
 name.deletion.policy.messages = até {0} mensagens
 name.deletion.policy.period = for {0}
