Localize Message Content
Message subject, body and html body are now LocalizedStrings. The email
dispatcher builds individual emails using the user's preferred locale
or, in the case of email only bccs, a sender specified locale. When a
content type is not defined for the user's locale the regular fallback
strategies are used. Interfaces display the resulting email content for
all supported locales plus any other locale for which the message has
specific content (usually set programmatically).
Additionally common message sending behaviour was grouped into the
MessageBean class and several styling adjustments were made to the
interface.

--- a/core/src/main/resources/MessagingResources_en.properties
+++ b/core/src/main/resources/MessagingResources_en.properties
@@ -19,7 +19,7 @@ label.bootstrapper.systemsender.address = Address
 label.bootstrapper.systemsender.group = Sender Group
 label.bootstrapper.systemsender.name = Name
 
-message.footer = {0}\n\n---\nThis message was sent by {1}, to the following recipients:\n\t{2}\n
+message.footer = \n\n---\nThis message was sent by {0}, to the following recipients:\n\t{1}
 
 name.deletion.policy.messages = up to {0} messages
 name.deletion.policy.period = for {0}
