--- a/core/src/main/resources/MessagingResources_pt.properties
+++ b/core/src/main/resources/MessagingResources_pt.properties
@@ -19,7 +19,7 @@ label.bootstrapper.systemsender.address = Endereço
 label.bootstrapper.systemsender.group = Grupo de Envio
 label.bootstrapper.systemsender.name = Nome
 
-message.footer = {0}\n\n---\nEsta mensagem foi enviada em nome do(a) {1}, para os seguintes destinatários:\n\t{2}\n
+message.footer = \n\n---\nEsta mensagem foi enviada em nome do(a) {0}, para os seguintes destinatários:\n\t{1}
 
 name.deletion.policy.messages = até {0} mensagens
 name.deletion.policy.period = for {0}
