--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -10,10 +10,12 @@ hint.extra.bccs = someone@example.com, ...
 
 label.message.bccs = Recipients (Bcc)
 label.message.bccs.extra = Other Recipients (Bcc)
+label.message.bccs.extra.locale = Other Recipients Locale
 label.message.body = Message
 label.message.body.html = HTML Message
 label.message.ccs = Recipients (Cc)
 label.message.created = Created
+label.message.locale = Content Locales
 label.message.replyTos = Reply to
 label.message.sender = Sender
 label.message.sender.name = Sender Name
