--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -10,10 +10,12 @@ hint.extra.bccs = alguem@exemplo.pt, ...
 
 label.message.bccs = Destinatários (Bcc)
 label.message.bccs.extra = Outros Destinatários (Bcc)
+label.message.bccs.extra.locale = Localização para Outros Destinatários
 label.message.body = Mensagem
 label.message.body.html = Mensagem HTML
 label.message.ccs = Destinatários (Cc)
 label.message.created = Criado
+label.message.locale = Localizações do Conteúdo
 label.message.replyTos = Responder a
 label.message.sender = Remetente
 label.message.sender.name = Nome do Remetente
