Enable sender creation, configuration and deletion
Introduce a new functionality with interfaces enabling managers to view,
create, configure and delete senders.
Fix minor bugs: CurrentUserReplyTo within Message objects, ReplyTos
constructor with variable arguments always resulting in empty ReplyTos.
Minor improvements: Standardize appearance of ReplyTo's and recipients
in view interfaces. Print ReplyTo differently according to type instead
of resolving concrete address. Show ReplyTo, Recipient and error lists
sorted. Make request mappings more consistent. Isolate pagination logic
and interface from other code. Restructure pagination interface.

--- a/core/src/main/resources/MessagingResources_en.properties
+++ b/core/src/main/resources/MessagingResources_en.properties
@@ -7,12 +7,23 @@ error.message.validation.html.forbidden = This sender is not allowed to send HTM
 error.message.validation.recipients.empty = At least one recipient is required.
 error.message.validation.subject.empty = Subject is required.
 error.message.validation.sender.empty = Sender is required.
-error.message.validation.recipient.erroneous = A recipient expression could not be understood: {0}. 
+error.message.validation.recipient.erroneous = A recipient expression could not be understood: {0}.
 error.not.authorized = You do not have permission to view this page
 error.template.invalid = Message template with id "{0}" produced an invalid message.
 error.template.malformed = Message template with id "{0}" could not be compiled.
 error.template.missing = Message template with id "{0}" could not be found.
 error.template.sending = Message template with id "{0}" produced a message that could not be sent.
+error.sender.validation.address.empty = Address is required.
+error.sender.validation.address.invalid = Address must be a valid e-mail address.
+error.sender.validation.html.required = HTML sending permission is required.
+error.sender.validation.members.empty = Member group expression is required.
+error.sender.validation.members.invalid = Member group expression is invalid.
+error.sender.validation.name.empty = Name is required.
+error.sender.validation.policy.empty = Message storage policy is required.
+error.sender.validation.policy.invalid = Message storage policy is invalid.
+error.sender.validation.policy.multiple = Multiple message storage policies specified.
+error.sender.validation.recipient.invalid = Invalid recipient: {0}.
+error.sender.validation.replyTo.invalid = Invalid reply to address: {0}.
 
 hint.bootstrapper.systemsender.address = noreply@organization.com
 hint.bootstrapper.systemsender.group = #managers
@@ -26,9 +37,10 @@ message.template.footer.name = Recipient Footer
 message.template.footer.body = \n\n---\nThis message was sent by {{sender}}, to the following recipients:\n\t{{recipients}}
 message.template.footer.description = Footer to be appended to messages containing the name of the institutional recipients
 
+name.reply.to.current.user = [Sender's User]
 name.deletion.policy.messages = up to {0} messages
 name.deletion.policy.period = for {0}
-name.deletion.policy.unlimited = forever
+name.deletion.policy.unlimited = unlimited
 
 title.bootstrapper = Messaging System
 title.bootstrapper.systemsender = System Sender
