--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -1,17 +1,25 @@
 action.configure.templates = Configure Templates
-action.message.delete = Delete
+action.create = Create
+action.delete = Delete
 action.message.new = New Message
 action.message.send = Send
-action.template.edit = Edit
-action.template.save = Save
-action.view.details = View Details
+action.configure = Configure
+action.edit = Edit
+action.save = Save
+action.new = New
+action.view = View Details
 
 error.message.not.sent = Message could not be sent:
 error.template.not.saved = Message template could not be saved:
+error.sender.not.saved = Sender configuration could not be saved:
 
 hint.sender.select = Select a sender
-hint.extra.bccs = someone@example.com, ...
+hint.user.list = user42, ...
+hint.email.list = someone@example.com, ...
+hint.group.expression = Group Expression
+hint.period = 1Y2M3D4H
 
+label.jump = Jump to
 label.message.bccs = Recipients (Bcc)
 label.message.bccs.extra = Other Recipients (Bcc)
 label.message.bccs.extra.locale = Other Recipients Locale
@@ -20,7 +28,6 @@ label.message.body.html = HTML Message
 label.message.ccs = Recipients (Cc)
 label.message.created = Created
 label.message.locale = Content Locales
-label.no = No
 label.message.replyTos = Reply to
 label.message.sender = Sender
 label.message.sender.name = Sender Name
@@ -32,11 +39,25 @@ label.message.status.sent = Sent
 label.message.sent.by = Sent by
 label.message.subject = Subject
 label.message.tos = Recipients (To)
+label.no = No
+label.of = of
+label.page = page
+label.items = items
 label.sender.address = Address
 label.sender.group = Sender Group
+label.sender.html = HTML Sending
+label.sender.members = Member Group Expression
 label.sender.name = Name
 label.sender.policy = Message Storage Policy
+label.sender.policy.unlimited = Unlimited
+label.sender.policy.period = By period:
+label.sender.policy.amount = By amount:
+label.sender.replyTo.current = [Sender's User]
+label.sender.replyTo.email = Emails:
+label.sender.replyTo.user = Users:
 label.sender.replyTos = Reply to
+label.sender.recipients = Recipients
+label.show = show
 label.template.description = Description
 label.template.footer = Automatic Footer
 label.template.id = Key
@@ -54,8 +75,14 @@ title.messages = Messages
 title.messaging = Messaging System
 title.messaging.sending = Message Sending
 title.messaging.templates = Template Configuration
+title.messaging.senders = Sender Configuration
 title.sender = Sender Information
+title.sender.system = System Sender
+title.sender.edit = Configure Sender
+title.sender.edit.new = Create Sender
 title.senders = Senders
-title.templates = Message Templates
+title.senders.config = Sender Configuration
+title.senders.others = Other Senders
+title.templates.config = Message Template Configuration
 title.template = Message Template
 title.template.edit = Edit Message Template
