--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -1,16 +1,23 @@
 action.configure.templates = Configurar Templates
-action.message.delete = Eliminar
+action.create = Criar
+action.delete = Eliminar
 action.message.new = Nova Mensagem
 action.message.send = Enviar
-action.template.edit = Editar
-action.template.save = Guardar
-action.view.details = Ver Detalhes
+action.configure = Configurar
+action.edit = Editar
+action.save = Guardar
+action.new = New
+action.view = Ver Detalhes
 
 error.message.not.sent = Mensagem não pôde ser enviada:
 error.template.not.saved = Modelo de mensagem não pode ser guardado:
+error.sender.not.saved = Configuração de Remetente não pode ser guardada:
 
 hint.sender.select = Seleccione um remetente
-hint.extra.bccs = alguem@exemplo.pt, ...
+hint.user.list = utilizador42, ...
+hint.email.list = alguem@exemplo.pt, ...
+hint.group.expression = Fórmula de Grupo
+hint.period = 1Y2M3D4H
 
 label.message.bccs = Destinatários (Bcc)
 label.message.bccs.extra = Outros Destinatários (Bcc)
@@ -20,7 +27,6 @@ label.message.body.html = Mensagem HTML
 label.message.ccs = Destinatários (Cc)
 label.message.created = Criado
 label.message.locale = Localizações do Conteúdo
-label.no = Não
 label.message.replyTos = Responder a
 label.message.sender = Remetente
 label.message.sender.name = Nome do Remetente
@@ -32,11 +38,25 @@ label.message.status.sent = Enviado
 label.message.sent.by = Enviado por
 label.message.subject = Assunto
 label.message.tos = Destinatários (To)
+label.no = Não
+label.of = de
+label.page = pág.
+label.items = items
 label.sender.address = Endereço
 label.sender.group = Grupo de Envio
+label.sender.html = Envio de HTML
+label.sender.members = Expressão de Grupo de Membros
 label.sender.name = Nome
 label.sender.policy = Política de Preservação de Mensagens
+label.sender.policy.unlimited = Ilimitada
+label.sender.policy.period = Por duração:
+label.sender.policy.amount = Por quantidade:
+label.sender.replyTo.current = [Utilizador do Remetente]
+label.sender.replyTo.email = Emails:
+label.sender.replyTo.user = Utilizadores:
 label.sender.replyTos = Responder a
+label.sender.recipients = Destinatários
+label.show = listar
 label.template.description = Descrição
 label.template.footer = Rodapé Automático
 label.template.id = Chave
@@ -54,8 +74,14 @@ title.messages = Mensagens
 title.messaging = Sistema de Mensagens
 title.messaging.sending = Envio de Mensagens
 title.messaging.templates = Configuração de Modelos de Mensagem
+title.messaging.senders = Configuração de Remetentes
 title.sender = Informação do Remetente
+title.sender.system = Remetente de Sistema
+title.sender.edit = Configurar Remetente
+title.sender.edit.new = Criar Remetente
 title.senders = Remetentes
-title.templates = Modelos de Mensagem
+title.senders.config = Configuração de Remetentes
+title.senders.others = Outros Remetentes
+title.templates.config = Configuração de Modelos de Mensagem
 title.template = Modelo de Mensagem
 title.template.edit = Editar Modelo de Mensagem
