UI improvements and bug fixes
Convert CurrentUserReplyTo to UserReplyTo when stored in Message objects
Correct ReplyTos variable String arguments constructor
Display ReplyTo according to type instead of just resolving concrete address
Standardize appearance of reply to's and recipients in view interfaces
Correct some property file language mistakes
Use Message.safeDelete method instead of Message.delete.
Hide message delete button from view when user is not the message creator
Hide html body and plain text body rows from view when they are empty
Sort ReplyTo, Recipient and error lists
Correct possible NullPointerExceptions in MessageBuilder and MessageBean.send
Correct extra bccs locale value in new message interface
Correct extra bccs filtering on message bean
Correct extra bccs value in new message interface
Hide reply tos and recipient rows when empty in new message interface
Improve concistency of request mappings
Restructure pagination interface
Isolate pagination logic and interface from other code

--- a/core/src/main/resources/MessagingResources_en.properties
+++ b/core/src/main/resources/MessagingResources_en.properties
@@ -29,9 +29,10 @@ message.template.message.wrapper.parameter.sender = Name of the message sender.
 message.template.message.wrapper.parameter.textContent = The plain text content of the message.
 message.template.message.wrapper.text = {{textContent}}\n\n---\nThis message was sent by {{sender}}, to the following recipients:{% for recipient in recipients %}\n\t{{recipient}}{% endfor %}
 
+name.reply.to.current.user = [Sender's User]
 name.deletion.policy.messages = up to {0} messages
 name.deletion.policy.period = for {0}
-name.deletion.policy.unlimited = forever
+name.deletion.policy.unlimited = unlimited
 
 title.bootstrapper = Messaging System
 title.bootstrapper.systemsender = System Sender
