--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -13,9 +13,10 @@ error.template.not.saved = Message template could not be saved:
 error.template.undeclared = Message template is undeclared.
 
 hint.sender.select = Select a sender
-hint.extra.bccs = someone@example.com, ...
+hint.email.list = someone@example.com, ...
 
 label.actions = Other Actions
+label.items = items
 label.message.bccs = Recipients (Bcc)
 label.message.bccs.extra = Other Recipients (Bcc)
 label.message.bccs.extra.locale = Other Recipients Locale
@@ -24,7 +25,6 @@ label.message.body.html = HTML Message
 label.message.ccs = Recipients (Cc)
 label.message.created = Created
 label.message.locale = Content Locales
-label.no = No
 label.message.replyTos = Reply to
 label.message.sender = Sender
 label.message.sender.name = Sender Name
@@ -36,11 +36,17 @@ label.message.status.sent = Sent
 label.message.sent.by = Sent by
 label.message.subject = Subject
 label.message.tos = Recipients (To)
+label.no = No
+label.of = of
+label.page = page
 label.sender.address = Address
 label.sender.group = Sender Group
+label.sender.html = HTML Sending
 label.sender.name = Name
 label.sender.policy = Message Storage Policy
+label.sender.recipients = Recipients
 label.sender.replyTos = Reply to
+label.show = show
 label.template.description = Description
 label.template.footer = Automatic Footer
 label.template.id = Key
