--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -13,9 +13,10 @@ error.template.not.saved = Modelo de mensagem não pode ser guardado:
 error.template.undeclared = Modelo de mensagem não foi declarado.
 
 hint.sender.select = Seleccione um remetente
-hint.extra.bccs = alguem@exemplo.pt, ...
+hint.email.list = alguem@exemplo.pt, ...
 
-label.Actions = Outras Acções
+label.actions = Outras Acções
+label.items = items
 label.message.bccs = Destinatários (Bcc)
 label.message.bccs.extra = Outros Destinatários (Bcc)
 label.message.bccs.extra.locale = Localização para Outros Destinatários
@@ -24,7 +25,6 @@ label.message.body.html = Mensagem HTML
 label.message.ccs = Destinatários (Cc)
 label.message.created = Criado
 label.message.locale = Localizações do Conteúdo
-label.no = Não
 label.message.replyTos = Responder a
 label.message.sender = Remetente
 label.message.sender.name = Nome do Remetente
@@ -36,11 +36,17 @@ label.message.status.sent = Enviado
 label.message.sent.by = Enviado por
 label.message.subject = Assunto
 label.message.tos = Destinatários (To)
+label.no = Não
+label.of = de
+label.page = pág.
 label.sender.address = Endereço
 label.sender.group = Grupo de Envio
+label.sender.html = Envio de HTML
 label.sender.name = Nome
 label.sender.policy = Política de Preservação de Mensagens
+label.sender.recipients = Destinatários
 label.sender.replyTos = Responder a
+label.show = listar
 label.template.description = Descrição
 label.template.footer = Rodapé Automático
 label.template.id = Chave
