--- a/core/src/main/resources/MessagingResources_pt.properties
+++ b/core/src/main/resources/MessagingResources_pt.properties
@@ -29,9 +29,10 @@ message.template.message.wrapper.parameter.sender = O nome do remetente da mensa
 message.template.message.wrapper.parameter.textContent = O conteúdo textual simples da mensagem.
 message.template.message.wrapper.text = {{textContent}}\n\n---\nEsta mensagem foi enviada em nome do(a) {{sender}}, para os seguintes destinatários:{% for recipient in recipients %}\n\t{{recipient}}{% endfor %}
 
+name.reply.to.current.user = [Utilizador do Remetente]
 name.deletion.policy.messages = até {0} mensagens
-name.deletion.policy.period = for {0}
-name.deletion.policy.unlimited = para sempre
+name.deletion.policy.period = durante {0}
+name.deletion.policy.unlimited = ilimitado
 
 title.bootstrapper = Sistema de Mensagens
 title.bootstrapper.systemsender = Remetente de Sistema
