Sender Management Interface
Allow Sender creation, configuration and deletion
Minor reorganizations in property files
Minor change in sorted ReplyTo and Recipient access in Sender

--- a/core/src/main/resources/MessagingResources_en.properties
+++ b/core/src/main/resources/MessagingResources_en.properties
@@ -12,6 +12,17 @@ error.message.validation.recipient.erroneous = A recipient expression could not 
 error.not.authorized = You do not have permission to view this page
 error.template.malformed = Message template with id "{0}" could not be compiled.
 error.template.missing = Message template with id "{0}" could not be found.
+error.sender.validation.address.empty = Address is required.
+error.sender.validation.address.invalid = Address must be a valid e-mail address.
+error.sender.validation.html.required = HTML sending permission is required.
+error.sender.validation.members.empty = Member group expression is required.
+error.sender.validation.members.invalid = Member group expression is invalid.
+error.sender.validation.name.empty = Name is required.
+error.sender.validation.policy.empty = Message storage policy is required.
+error.sender.validation.policy.invalid = Message storage policy is invalid.
+error.sender.validation.policy.multiple = Multiple message storage policies specified.
+error.sender.validation.recipient.invalid = Invalid recipient: {0}.
+error.sender.validation.replyTo.invalid = Invalid reply to address: {0}.
 
 hint.bootstrapper.systemsender.address = noreply@organization.com
 hint.bootstrapper.systemsender.group = #managers
