--- a/core/src/main/resources/MessagingResources_pt.properties
+++ b/core/src/main/resources/MessagingResources_pt.properties
@@ -12,6 +12,17 @@ error.message.validation.recipient.erroneous = Uma expressão de destinatário não
 error.not.authorized = Não tem permissões para ver esta página
 error.template.malformed = Não foi possível compilar a template de mensagem com id "{0}".
 error.template.missing = Não foi possível encontrar a template de mensagem com id "{0}".
+error.sender.validation.address.empty = Endereço é necessário.
+error.sender.validation.address.invalid = Endereço tem de ser um endereço de e-mail válido.
+error.sender.validation.html.required = Permissão de envio de HTML é necessário.
+error.sender.validation.members.empty = Expressão de grupo de membros é necessária.
+error.sender.validation.members.invalid = Expressão de grupo de membros é inválida.
+error.sender.validation.name.empty = Nome é necessário.
+error.sender.validation.policy.empty = Política de preservação de mensagens é necessária.
+error.sender.validation.policy.invalid = Política de preservação de mensagens inválida.
+error.sender.validation.policy.multiple = Multiplas políticas de preservação de mensagens especificadas.
+error.sender.validation.recipient.invalid = Recipiente inválido: {0}.
+error.sender.validation.replyTo.invalid = Endereço de resposta inválido: {0}.
 
 hint.bootstrapper.systemsender.address = noreply@organization.com
 hint.bootstrapper.systemsender.group = #managers
