--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -1,19 +1,26 @@
-action.message.delete = Delete
-action.message.new = New Message
-action.message.send = Send
-action.template.edit = Edit
-action.template.reset = Restore Defaults
-action.template.save = Save
-action.template.info.show = Show Description
-action.template.info.hide = Hide Description
-action.view.details = View Details
+action.configure = Configure
+action.create = Create
+action.delete = Delete
+action.edit = Edit
+action.hide.template.info = Hide Details
+action.new.sender = New Sender
+action.new.message = New Message
+action.send.message = Send
+action.show.template.info = Show Details
+action.reset.template = Restore Defaults
+action.save = Save
+action.view = View Details
 
 error.message.not.sent = Message could not be sent:
 error.template.not.saved = Message template could not be saved:
 error.template.undeclared = Message template is undeclared.
+error.sender.not.saved = Sender configuration could not be saved:
 
-hint.sender.select = Select a sender
 hint.email.list = someone@example.com, ...
+hint.group.expression = Group Expression
+hint.period = 1Y2M3D4H
+hint.sender.select = Select a sender
+hint.user.list = user42, ...
 
 label.actions = Other Actions
 label.items = items
@@ -42,9 +49,16 @@ label.page = page
 label.sender.address = Address
 label.sender.group = Sender Group
 label.sender.html = HTML Sending
+label.sender.members = Member Group Expression
 label.sender.name = Name
 label.sender.policy = Message Storage Policy
+label.sender.policy.amount = By amount:
+label.sender.policy.period = By period:
+label.sender.policy.unlimited = Unlimited
 label.sender.recipients = Recipients
+label.sender.replyTo.current = [Sender's User]
+label.sender.replyTo.email = Emails:
+label.sender.replyTo.user = Users:
 label.sender.replyTos = Reply to
 label.show = show
 label.template.description = Description
@@ -63,10 +77,16 @@ title.message = Message
 title.message.new = New Message
 title.messages = Messages
 title.messaging = Messaging System
+title.messaging.senders = Sender Configuration
 title.messaging.sending = Message Sending
 title.messaging.templates = Template Configuration
 title.sender = Sender Information
+title.sender.edit = Configure Sender
+title.sender.edit.new = Create Sender
+title.sender.system = System Sender
 title.senders = Senders
+title.senders.config = Sender Configuration
+title.senders.others = Other Senders
 title.templates.config = Message Template Configuration
 title.template = Message Template
 title.template.edit = Edit Message Template
