--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -1,19 +1,26 @@
-action.message.delete = Eliminar
-action.message.new = Nova Mensagem
-action.message.send = Enviar
-action.template.edit = Editar
-action.template.reset = Restaurar Conteúdo Padrão
-action.template.save = Guardar
-action.template.info.show = Ver Parâmetros
-action.template.info.hide = Esconder Parâmetros
-action.view.details = Ver Detalhes
+action.configure = Configurar
+action.create = Criar
+action.delete = Eliminar
+action.edit = Editar
+action.hide.template.info = Esconder Detalhes
+action.new.sender = Novo Remetente
+action.new.message = Nova Mensagem
+action.send.message = Enviar
+action.show.template.info = Ver Detalhes
+action.reset.template = Restaurar Conteúdo Padrão
+action.save = Guardar
+action.view = Ver Detalhes
 
 error.message.not.sent = Mensagem não pôde ser enviada:
 error.template.not.saved = Modelo de mensagem não pode ser guardado:
 error.template.undeclared = Modelo de mensagem não foi declarado.
+error.sender.not.saved = Configuração de Remetente não pode ser guardada:
 
-hint.sender.select = Seleccione um remetente
 hint.email.list = alguem@exemplo.pt, ...
+hint.group.expression = Fórmula de Grupo
+hint.period = 1Y2M3D4H
+hint.sender.select = Seleccione um remetente
+hint.user.list = utilizador42, ...
 
 label.actions = Outras Acções
 label.items = items
@@ -42,9 +49,16 @@ label.page = pág.
 label.sender.address = Endereço
 label.sender.group = Grupo de Envio
 label.sender.html = Envio de HTML
+label.sender.members = Expressão do Grupo de Membros
 label.sender.name = Nome
 label.sender.policy = Política de Preservação de Mensagens
+label.sender.policy.amount = Por quantidade:
+label.sender.policy.period = Por duração:
+label.sender.policy.unlimited = Ilimitada
 label.sender.recipients = Destinatários
+label.sender.replyTo.current = [Utilizador do Remetente]
+label.sender.replyTo.email = Emails:
+label.sender.replyTo.user = Utilizadores:
 label.sender.replyTos = Responder a
 label.show = listar
 label.template.description = Descrição
@@ -63,10 +77,16 @@ title.message = Mensagem
 title.message.new = Nova Mensagem
 title.messages = Mensagens
 title.messaging = Sistema de Mensagens
+title.messaging.senders = Configuração de Remetentes
 title.messaging.sending = Envio de Mensagens
 title.messaging.templates = Configuração de Modelos de Mensagem
 title.sender = Informação do Remetente
+title.sender.edit = Configurar Remetente
+title.sender.edit.new = Criar Remetente
+title.sender.system = Remetente de Sistema
 title.senders = Remetentes
+title.senders.config = Configuração de Remetentes
+title.senders.others = Outros Remetentes
 title.templates.config = Configuração de Modelos de Mensagem
 title.template = Modelo de Mensagem
 title.template.edit = Editar Modelo de Mensagem
