Remove ReplyTo and ReplyToArray classes in favor of one single email reply to.

--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -16,11 +16,11 @@ error.template.not.saved = Message template could not be saved:
 error.template.undeclared = Message template is undeclared.
 error.sender.not.saved = Sender configuration could not be saved:
 
+hint.email = someone@example.com
 hint.email.list = someone@example.com, ...
 hint.group.expression = Group Expression
 hint.period = 1Y2M3D4H
 hint.sender.select = Select a sender
-hint.user.list = user42, ...
 
 label.actions = Other Actions
 label.items = items
@@ -32,7 +32,7 @@ label.message.body.html = HTML Message
 label.message.ccs = Recipients (Cc)
 label.message.created = Created
 label.message.locale = Content Locales
-label.message.replyTos = Reply to
+label.message.replyTo = Reply to
 label.message.sender = Sender
 label.message.sender.name = Sender Name
 label.message.sender.address = Sender Address
@@ -56,10 +56,7 @@ label.sender.policy.amount = By amount:
 label.sender.policy.period = By period:
 label.sender.policy.unlimited = Unlimited
 label.sender.recipients = Recipients
-label.sender.replyTo.current = [Sender's User]
-label.sender.replyTo.email = Emails:
-label.sender.replyTo.user = Users:
-label.sender.replyTos = Reply to
+label.sender.replyTo = Reply to
 label.show = show
 label.template.description = Description
 label.template.footer = Automatic Footer
