--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -16,11 +16,11 @@ error.template.not.saved = Modelo de mensagem não pode ser guardado:
 error.template.undeclared = Modelo de mensagem não foi declarado.
 error.sender.not.saved = Configuração de Remetente não pode ser guardada:
 
+hint.email = alguem@exemplo.pt
 hint.email.list = alguem@exemplo.pt, ...
 hint.group.expression = Fórmula de Grupo
 hint.period = 1Y2M3D4H
 hint.sender.select = Seleccione um remetente
-hint.user.list = utilizador42, ...
 
 label.actions = Outras Acções
 label.items = items
@@ -32,7 +32,7 @@ label.message.body.html = Mensagem HTML
 label.message.ccs = Destinatários (Cc)
 label.message.created = Criado
 label.message.locale = Localizações do Conteúdo
-label.message.replyTos = Responder a
+label.message.replyTo = Responder para
 label.message.sender = Remetente
 label.message.sender.name = Nome do Remetente
 label.message.sender.address = Endereço do Remetente
@@ -56,10 +56,7 @@ label.sender.policy.amount = Por quantidade:
 label.sender.policy.period = Por duração:
 label.sender.policy.unlimited = Ilimitada
 label.sender.recipients = Destinatários
-label.sender.replyTo.current = [Utilizador do Remetente]
-label.sender.replyTo.email = Emails:
-label.sender.replyTo.user = Utilizadores:
-label.sender.replyTos = Responder a
+label.sender.replyTo = Responder para
 label.show = listar
 label.template.description = Descrição
 label.template.footer = Rodapé Automático
