Add subject to message templates
additionally, fix missing html body in Messaging's wrapper message template.

--- a/core/src/main/resources/MessagingResources_en.properties
+++ b/core/src/main/resources/MessagingResources_en.properties
@@ -33,11 +33,13 @@ label.bootstrapper.systemsender.group = Sender Group
 label.bootstrapper.systemsender.name = Name
 
 message.template.message.wrapper.description = Wraps institutional messages sent via the message sending interface.
-message.template.message.wrapper.html =
+message.template.message.wrapper.html = {{htmlContent}}
 message.template.message.wrapper.parameter.htmlContent = The HTML content of the message.
 message.template.message.wrapper.parameter.recipients = The message's group recipients.
 message.template.message.wrapper.parameter.sender = Name of the message sender.
 message.template.message.wrapper.parameter.textContent = The plain text content of the message.
+message.template.message.wrapper.parameter.subjectContent = The content of the message subject.
+message.template.message.wrapper.subject = {{subjectContent}}
 message.template.message.wrapper.text = {{textContent}}\n\n---\nThis message was sent by {{sender}}, to the following recipients:{% for recipient in recipients %}\n\t{{recipient}}{% endfor %}
 
 name.deletion.policy.messages = up to {0} messages
