--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -68,7 +68,7 @@ label.yes = Yes
 notification.message.sent = This message has been queued for sending. While it is not dispatched you may delete it, canceling the process.
 notification.template.empty = This message template is empty. Attempts to send it will fail reporting an error.
 notification.template.subject.empty = This message template's subject is empty. Attempts to send it will fail reporting an error.
-notification.template.message.empty = This message template's body is empty. Attempts to send it will fail reporting an error.
+notification.template.body.empty = This message template's body is empty. Attempts to send it will fail reporting an error.
 
 title.message = Message
 title.message.new = New Message
