--- a/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -68,7 +68,7 @@ label.yes = Sim
 notification.message.sent = Esta mensagem está pendente para envio. Enquanto não for enviada poderá apagá-la, cancelando o processo.
 notification.template.empty = Este modelo de mensagem encontra-se vazio. Tentativas de envio irão falhar reportando um erro.
 notification.template.subject.empty = O assunto deste modelo de mensagem encontra-se vazio. Tentativas de envio irão falhar reportando um erro.
-notification.template.message.empty = A mensagem deste modelo de mensagem encontra-se vazia. Tentativas de envio irão falhar reportando um erro.
+notification.template.body.empty = O corpo deste modelo de mensagem encontra-se vazio. Tentativas de envio irão falhar reportando um erro.
 
 title.message = Mensagem
 title.message.new = Nova Mensagem
