improve email-dispatch and fix various bugs
make email validation and handling consistent
relocate locale separation logic from Message to dispatch implementation
improve mime message creation and address distribution in email-dispatch
introduce a bcc only option in email-dispatch
fix bug: ccs provided as bccs when separating by locale
fix bug: erroneous total delivery count in the report
fix bug: missing newline in wrapper template

--- a/core/src/main/resources/MessagingResources_en.properties
+++ b/core/src/main/resources/MessagingResources_en.properties
@@ -40,7 +40,7 @@ message.template.message.wrapper.parameter.sender = Name of the message sender.
 message.template.message.wrapper.parameter.textContent = The plain text content of the message.
 message.template.message.wrapper.parameter.subjectContent = The content of the message subject.
 message.template.message.wrapper.subject = {{subjectContent}}
-message.template.message.wrapper.text = {{textContent}}\n\n---\nThis message was sent by {{sender}}, to the following recipients:{% for recipient in recipients %}\n\t{{recipient}}{% endfor %}
+message.template.message.wrapper.text = {{textContent}}\n\n---\nThis message was sent by {{sender}}, to the following recipients:{% for recipient in recipients %}\n\n\t{{recipient}}{% endfor %}
 
 name.deletion.policy.messages = up to {0} messages
 name.deletion.policy.period = for {0}
