--- a/core/src/main/resources/MessagingResources_pt.properties
+++ b/core/src/main/resources/MessagingResources_pt.properties
@@ -40,7 +40,7 @@ message.template.message.wrapper.parameter.sender = O nome do remetente da mensa
 message.template.message.wrapper.parameter.textContent = O conteúdo textual simples da mensagem.
 message.template.message.wrapper.parameter.subjectContent = O conteúdo do assunto da mensagem.
 message.template.message.wrapper.subject = {{subjectContent}}
-message.template.message.wrapper.text = {{textContent}}\n\n---\nEsta mensagem foi enviada em nome do(a) {{sender}}, para os seguintes destinatários:{% for recipient in recipients %}\n\t{{recipient}}{% endfor %}
+message.template.message.wrapper.text = {{textContent}}\n\n---\nEsta mensagem foi enviada em nome do(a) {{sender}}, para os seguintes destinatários:{% for recipient in recipients %}\n\n\t{{recipient}}{% endfor %}
 
 name.deletion.policy.messages = até {0} mensagens
 name.deletion.policy.period = durante {0}
